VideoDb: Add Primary Medium watched status filter
Resolves #128
